fixed missing cursor in terminal

--- a/docklrterm/templates/term.html
+++ b/docklrterm/templates/term.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="TermModal" tabindex="-1" role="dialog" aria-labelledby="TermModal"
      aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog wide-modal">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
