--- a/static/docklr.css
+++ b/static/docklr.css
@@ -83,3 +83,19 @@ button.right {
     background: 0 0;
     border: 0
 }
+
+.terminal {
+    border: #000 solid 5px;
+    font-family: "Monaco", "DejaVu Sans Mono", "Liberation Mono", monospace;
+    font-size: 11px;
+    color: #f0f0f0;
+    background: #000;
+    width: 90%;
+    box-shadow: rgba(0, 0, 0, 0.8) 2px 2px 20px;
+}
+
+.reverse-video {
+    color: #000;
+    background: #f0f0f0;
+}
+
